# safa

./: CMakeLists.txt  README.md
Common/: AortaUtility.cxx  AortaUtility.h  HeuristicBloodBehaviorDetection.cpp  HeuristicBloodBehaviorDetection.h  ImageCursor.cxx  ImageCursor.h  itkDICOMTags.h  itkImageTypes.h  itkReaderEvents.h  vtkKWImage.cxx  vtkKWImage.h  vtkKWImageIO.cxx
GUI/: AortaFlowApp.cxx  AortaFlowApp.h  AortaFlowApp.ui  AortaFlowAppOK.ui  Form3D.cxx  Form3D.h  Form3D.ui  Form3D1.ui  Layout.ui  ResourcesFile.qrc  Viewer.cxx  Viewer.h  Viewer.ui  ViewerOK.ui  ViewerSynchronize.cxx  ViewerSynchronize.h  icons.rar
IO/: AortaSeriesImporter.cxx  AortaSeriesImporter.h  DICOMHeaderReader.cxx  DICOMHeaderReader.h  DICOMScalar4DImageLoader.cxx  DICOMScalar4DImageLoader.h  DICOMVectorial3DImageLoader.cxx  DICOMVectorial3DImageLoader.h  DICOMVectorial4DImageLoader.cxx  DICOMVectorial4DImageLoader.h  ObserverReader.h  itkDICOM4DVPixelReader.cxx  itkDICOM4DVPixelReader.h
Segmentation/: AF4DCenterLine.cxx  AF4DCenterLine.h  AortaSegmentationPipeline.cxx  AortaSegmentationPipeline.h  WriteImageRoutines.cxx  WriteImageRoutines.h  itkVectorMagnitudeMinimumMaximumImageCalculator.cxx  itkVectorMagnitudeMinimumMaximumImageCalculator.h  itkVelocityEncodingImageFilter.cxx  itkVelocityEncodingImageFilter.h
System/: AortaFlowMain.cxx
Temp/: AortaFlowApp.cxx  AortaFlowApp.h  ui_AortaFlowApp.h
Test/: TestAF4DCenterLine.h  TestAll.cxx  TestDICOMScalar4DImageLoader.h  TestDICOMVectorial3DImageLoader.h  TestDICOMVectorial4DImageLoader.h  TestLoaders.cxx
